cluster/services/librephotos/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: librephotos
spec:
  selector:
    matchLabels:
      run: backend
  replicas: 1
  template:
    metadata:
      labels:
        run: backend
    spec:
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs-claim
      containers:
      - name: backend
        image: reallibrephotos/librephotos:dev
        volumeMounts:
        - name: nfs
          mountPath: "/data"
          subPath: "nextcloud/ohthehugemantee/files/archive/Photos"
        - name: nfs
          mountPath: "/protected_media"
          subPath: ".docker/config/librephotos/protected_media"
        - name: nfs
          mountPath: "/logs"
          subPath: ".docker/config/librephotos/logs"
        - name: nfs
          mountPath: "/cache"
          subPath: ".docker/config/librephotos/cache"
        ports:
          - containerPort: 8001
            name: backend
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: librephotos
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: backend
  - name: http-8001
    port: 8001
    protocol: TCP
    targetPort: backend
  selector:
    run: backend
