cluster/services/librephotos/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: librephotos
spec:
  selector:
    matchLabels:
      run: redis
  replicas: 1
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
      - name: redis
        image: redis:6
        ports:
          - containerPort: 6379
            name: redis
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: librephotos
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: redis
  selector:
    run: redis
